<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">



        <EditText
            android:id="@+id/texto1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:autofillHints="name"
            android:hint="texto"
            android:inputType="text"
            android:minHeight="48dp"

            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/texto2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:autofillHints="name"
            android:hint="texto"
            android:inputType="text"
            android:minHeight="48dp"

            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/compara_btn"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginVertical="18dp"
            android:text="comparar"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/resultado"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="24dp"
            android:text=""
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>